Fixes Torlock search performer

--- a/changelog
+++ b/changelog
@@ -3,9 +3,10 @@ frostwire (6.1.6) stable; urgency=high
   * Fixes SoundCloud search.
   * Fixes TPB search.
   * Fixes BTJunkie search.
+  * Fixes TorLock search.
   * Updates to Spanish and Romanian translations.
 	
- -- FrostWire Team <contact@frostwire.com>  Oct, 25 Sep 2015 20:38:10 -0500
+ -- FrostWire Team <contact@frostwire.com>  Oct, 25 Sep 2015 21:18:10 -0500
 
 frostwire (6.1.5) stable; urgency=high
   * New http engine based on okhttp, uses pooled connections, less threads,
